--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+cypress/screenshots
+cypress/videos
+after_spec_results.json
+package-lock.json
+results.json
+submissionData.json
