--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^9.0.2",
+    "gh-pages": "^5.0.0",
+    "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-animated-cursor": "^2.5.2",
