--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-tooltip": "^4.5.1",
+    "styled-component": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
